-------------------

- Fix decoding of URLs in DAVResponse when there is raw UTF8 in the xml
  (instead of fully url encoded).
- Corrected Logging of query-server queries (#8308)
- Pass lock-token for MOVE (#8980).
- Fix query server integration: The API implemented ``range()`` while it must
  read ``between()``.
- Raise exception in connector when query server returns an error.


1.22.2 (2010-08-30)
-------------------

- Connector invalidation event subscriber doesn't raise ValueError any longer
  for UniqueIds the connector isn't responsible for (#7933)


1.22.1 (2010-08-17)
-------------------

- Fixed cache invalidation for collections with non-collection ids (#7906).


1.22.0 (2010-08-16)
-------------------

- When the cache is invalidated it only causes write request when there
  actually was a change. Before cached data was thrown away and stored in any
  case (#7797).


1.21.0 (2010-07-06)
-------------------

- Set the UUID via a custom header on PUT (#7366).

- MOVE is now doing a MOVE instead of COPY+DELETE (#7440)


1.20.1 (2010-06-09)
-------------------

- Rename supports renaming to ids with non-us-ascii chars (#7405)
- Correctly escape # in ids (#6042).
- Using versions from the ZTK.


1.20.0 (2010-01-18)
-------------------

- Do not sweep cache automatically. This should be done via a cronjob.


1.19.3 (2009-10-08)
-------------------

- Don't raise a PreconditionFailedError when the body of the stored resource 
  matches the to-be-written body. This is to support ZODB conflict errors
  without DAV having transactions.

- Fixed level 3 tests.


1.19.2 (2009-09-29)
-------------------

- Mock connector behaves more like the real one in regard to conflicts and
  etag preconditions.


1.19.1 (2009-09-28)
-------------------

- Removed a savepoint to avoid garbage collection which lead to LockingErrors.
  Note that this probably is a ZODB bug we're working around here.


1.19 (2009-09-24)
-----------------
